Terraform/Modules/security_group_module/security_group_resource.tf
resource "aws_security_group" "ec2_sg_resource" {
  name        = "lear-sg"
  description = "Allow inbound traffic"
  vpc_id      = var.vpc_id_var

  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["103.58.118.81/32"]
  }
   ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["103.58.118.81/32"]
  }
   ingress {
    description      = "TLS from VPC"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["103.58.118.81/32"]
  }
  

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "lear-sg"
  }
}
